sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:14: error: not found: value i
       if(plusPetit(j+1,i)){echange(j+1,i);switch=true}}
                        ^AlgCocktailSort1:14: error: not found: value i
       if(plusPetit(j+1,i)){echange(j+1,i);switch=true}}
                                        ^